--- a/main.css
+++ b/main.css
@@ -1,29 +1,26 @@
 * {
-    background-color: rgb(143, 206, 219);
-    text-align: center;
-    font-size: 40px;
-    border-image-width: 100px;
-;
-
-    font-variant: small-caps;
-    color: rgb(0, 0, 0);
+    background-color: aquamarine;
+    text-shadow: black;
+    font-size: x-large;
+    text-align: left;
+    font-family: 'Courier New', Courier, monospace;
     }
-h1 {
-    font-size: 40px;
-    color: black;
-}
-p {
-font-size: 25px;
-
-color: rgb(0, 0, 0);
-font-size: 25px;
+h1{
+    background-color: black;
+    color: white;
 }
 h2 {
-    background-color: darkslateblue;
-    color:rgb(0, 0, 0);
-    font-size: x-large;
+   background-color: black;
+   background-position: center;
 }
-
-.img {
-    flex-direction: ;
+p {
+    background-color: black;
+color: white;
+}
+a {
+    background-color: black;
+    color: white 
+}
+p {
+    background-color: rgb(5, 78, 78);
 }
